[package]
name = "desperatedig"
license = "MIT"
version = "0.1.0"
authors = ["Odeya Nidström <odeya.nidstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.39.1"
luminance = "0.42.0"
luminance-derive = "0.6.2"
luminance-glfw = "0.14.0"
luminance-gl = "0.15.0"
luminance-windowing = "0.9.2"
nalgebra-glm = "0.8.0"

[profile.release]
opt-level = "s"
